--- a/src/assets/gui.fxml
+++ b/src/assets/gui.fxml
@@ -8,70 +8,63 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="374.0" prefWidth="493.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rombus.evilbones.fwg.Main">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="503.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rombus.evilbones.fwg.Main">
    <children>
-      <HBox prefHeight="39.0" prefWidth="600.0">
+      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="98.0" prefWidth="350.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="NEVER" maxWidth="214.0" minWidth="10.0" prefWidth="105.0" />
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="341.0" minWidth="10.0" prefWidth="198.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label alignment="CENTER" prefHeight="35.0" prefWidth="110.0" text="Seed words:" />
-            <TextField fx:id="userInputText" alignment="TOP_LEFT" prefHeight="25.0" prefWidth="377.0" HBox.hgrow="ALWAYS">
-               <HBox.margin>
-                  <Insets right="5.0" top="5.0" />
-               </HBox.margin>
+            <Label alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="110.0" text="Seed words:">
+               <GridPane.margin>
+                  <Insets right="5.0" />
+               </GridPane.margin>
+            </Label>
+            <TextField fx:id="userInputText" alignment="TOP_LEFT" prefHeight="25.0" prefWidth="377.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor>
+               <GridPane.margin>
+                  <Insets left="5.0" right="10.0" />
+               </GridPane.margin>
             </TextField>
-         </children>
-      </HBox>
-      <HBox alignment="TOP_RIGHT" prefHeight="46.0" prefWidth="493.0">
-         <children>
-            <Label prefHeight="36.0" prefWidth="98.0" text="Word length:" />
-            <Slider fx:id="wordLenSlider" blockIncrement="1.0" majorTickUnit="1.0" max="9.0" min="3.0" prefHeight="73.0" prefWidth="162.0" snapToTicks="true" value="4.0">
-               <HBox.margin>
-                  <Insets right="20.0" />
-               </HBox.margin>
+            <Label alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="110.0" text="Word length:" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="25.0" right="5.0" />
+               </GridPane.margin>
+            </Label>
+            <Slider fx:id="wordLenSlider" blockIncrement="1.0" majorTickUnit="1.0" max="9.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" min="3.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="51.0" prefWidth="245.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="4.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </Slider>
-            <Button fx:id="generateBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Generate">
-               <HBox.margin>
-                  <Insets right="5.0" top="5.0" />
-               </HBox.margin>
-            </Button>
-            <Button fx:id="clearBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Clear">
-               <HBox.margin>
-                  <Insets right="5.0" top="5.0" />
-               </HBox.margin>
-            </Button>
          </children>
-         <VBox.margin>
-            <Insets top="5.0" />
-         </VBox.margin>
+      </GridPane>
+      <HBox alignment="CENTER_RIGHT" prefHeight="34.0" prefWidth="222.0" VBox.vgrow="NEVER">
+         <children>
+            <Button fx:id="clearBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="71.0" text="Clear" HBox.hgrow="NEVER">
+               <HBox.margin>
+                  <Insets right="5.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="generateBtn" mnemonicParsing="false" prefHeight="25.0" prefWidth="118.0" text="Generate" HBox.hgrow="NEVER" />
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </HBox>
       <VBox prefHeight="284.0" prefWidth="491.0" VBox.vgrow="ALWAYS">
          <children>
-            <HBox prefHeight="284.0" prefWidth="493.0" VBox.vgrow="ALWAYS">
-               <children>
-                  <TextArea fx:id="resultText" editable="false" maxHeight="1.7976931348623157E308" prefHeight="276.0" prefWidth="336.0">
-                     <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" top="5.0" />
-                     </HBox.margin>
-                  </TextArea>
-                  <ImageView fx:id="dinoImg" fitHeight="150.0" fitWidth="200.0" opacity="0.42" pickOnBounds="true" preserveRatio="true">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                     <image>
-                        <Image url="@dino.png" />
-                     </image>
-                     <viewport>
-                        <Rectangle2D />
-                     </viewport>
-                  </ImageView>
-               </children>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </HBox>
+            <TextArea fx:id="resultText" editable="false" maxHeight="1.7976931348623157E308" prefHeight="276.0" prefWidth="336.0" VBox.vgrow="ALWAYS" />
          </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </VBox>
    </children>
 </VBox>
